--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@types/express": "^4.17.6",
         "@types/express-fileupload": "^1.1.3",
+        "@types/jquery": "^3.3.38",
         "@types/socket.io": "^2.1.6",
         "@types/socket.io-client": "^1.4.33",
         "ejs": "^3.1.3",
