--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "@types/express": "^4.17.6",
         "@types/express-fileupload": "^1.1.3",
         "@types/jquery": "^3.3.38",
+        "@types/node-fetch": "^2.5.7",
         "@types/socket.io": "^2.1.6",
         "@types/socket.io-client": "^1.4.33",
         "ejs": "^3.1.3",
         "express": "^4.17.1",
         "express-fileupload": "^1.1.7-alpha.3",
+        "node-fetch": "^2.6.0",
         "socket.io": "^2.3.0",
         "typescript": "^3.9.2"
     },
