--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "bob": "npm run build && npm run start",
         "bob-dev": "node tsc-dev.js"
     },
-    "author": "szivacs",
+    "author": "gergoszaszvaradi",
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.6",
