--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "author": "gergoszaszvaradi",
     "license": "ISC",
     "dependencies": {
-        "@types/express": "^4.17.6",
-        "@types/express-fileupload": "^1.1.3",
-        "@types/jquery": "^3.3.38",
-        "@types/node-fetch": "^2.5.7",
-        "@types/socket.io": "^2.1.6",
-        "@types/socket.io-client": "^1.4.33",
-        "ejs": "^3.1.3",
+        "@types/express": "^4.17.11",
+        "@types/express-fileupload": "^1.1.6",
+        "@types/jquery": "^3.5.5",
+        "@types/node-fetch": "^2.5.8",
+        "@types/socket.io": "^2.1.13",
+        "@types/socket.io-client": "^1.4.36",
+        "ejs": "^3.1.6",
         "express": "^4.17.1",
-        "express-fileupload": "^1.1.7-alpha.3",
-        "node-fetch": "^2.6.0",
-        "socket.io": "^2.3.0",
-        "typescript": "^3.9.2"
+        "express-fileupload": "^1.2.1",
+        "node-fetch": "^2.6.1",
+        "socket.io": "^2.4.1",
+        "typescript": "^3.9.9"
     },
     "devDependencies": {
         "colors": "^1.4.0",
-        "nodemon": "^2.0.4"
+        "nodemon": "^2.0.7"
     }
 }
